[package]
name = "social-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dcl-rpc = {version = "2.3.5", features = ["client", "tungstenite"]}
prost = "0.11.5"
async-channel = "1.8.0"
async-trait = "0.1.57"
bytes = "1.3.0"
futures-channel = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
log = "0.4.17"
tokio = {version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "time", "sync"]}
tokio-tungstenite = "*"
tokio-util = "0.7.4"
rcgen = "0.10.0"
serde_json = "1.0.89"

[build-dependencies]
dcl-rpc = {version = "2.3.5", features = ["client", "tungstenite"]}
prost-build = "0.11.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.94"

[[bin]]
name = "friendship_procedures_executor"
path = "src/friendship_procedures_executor.rs"

[[bin]]
name = "friendship_events_listener"
path = "src/friendship_events_listener.rs"

[[bin]]
name = "client_a"
path = "src/client_a.rs"

[[bin]]
name = "client_b"
path = "src/client_b.rs"

[[bin]]
name = "client_c"
path = "src/client_c.rs"
